--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "php": ">=5.4",
         "orno/di": "2.*",
         "orno/http": "1.*",
-        "nikic/fast-route": "dev-master"
+        "nikic/fast-route": "0.1.*"
     },
     "authors": [
         {
@@ -19,6 +19,5 @@
         "psr-4": {
             "Orno\\Route\\": "src/"
         }
-    },
-    "minimum-stability": "dev"
+    }
 }
