--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ php:
   - 5.5
   - 5.6
   - hhvm
-
+  
 matrix:
   allow_failures:
     - php: hhvm
@@ -14,5 +14,9 @@ before_script:
   - curl -s http://getcomposer.org/installer | php
   - php composer.phar install
 
+after_script:
+  - wget https://scrutinizer-ci.com/ocular.phar
+  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+
 script:
-  phpunit
+  phpunit --coverage-text --coverage-clover=coverage.clover
