--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,9 @@
         "orno/http": "1.*",
         "nikic/fast-route": "0.1.*"
     },
+    "require-dev":{
+        "phpunit/phpunit": "4.2.*"
+    },
     "authors": [
         {
             "name": "Phil Bennett",
