--- a/composer.json
+++ b/composer.json
@@ -5,17 +5,17 @@
     "license": "MIT",
     "require": {
         "php": ">=5.4",
-        "orno/di": "2.*",
-        "orno/http": "1.*",
-        "nikic/fast-route": "0.1.*"
+        "orno/di": "~2.1",
+        "orno/http": "~1.0",
+        "nikic/fast-route": "~0.2"
     },
     "require-dev":{
-        "phpunit/phpunit": "3.7.*"
+        "phpunit/phpunit": "~4.0"
     },
     "authors": [
         {
             "name": "Phil Bennett",
-            "email": "hello@happyaccidents.me"
+            "email": "philipobenito@gmail.com"
         }
     ],
     "autoload": {
